# nao_kinect_teleop

./: CMakeLists.txt  HOWTO.md  README.md  USAGE.md  package.xml
cmake/: FindqpOASES.cmake
config/: nao-base-footprint.rviz  nao.rviz
include/nao_kinect_teleop/: ball-marker.hpp  frame-marker.hpp  joint-state-pub.hpp  kinect-arm-head-points.hpp  kinect-arm-points.hpp  kinect-skeleton-fixed.hpp  line-marker.hpp  marker.hpp  markers.hpp  nao-interface.hpp  robotSpecifics.h  tools.hpp
include/nao_kinect_teleop/deprecated/: robotSpecifics.h  tools.hpp
launch/: display.launch  nao_bringup.launch
nodes/: floor_publisher  nao_bridge.py
src/: JointConfig.txt  markers.cpp  nao_arms_teleop.cpp  teleop-arms-head-2.cpp  teleop-arms-head.cpp  teleop-arms-rviz.cpp  teleop-arms.cpp  tools.cpp
src/deprecated/: nao_arms_teleop.cpp  tools.cpp
src/utils/: ball-marker.cpp  frame-marker.cpp  joint-state-pub.cpp  kinect-arm-head-points.cpp  kinect-arm-points.cpp  kinect-skeleton-fixed.cpp  line-marker.cpp  marker.cpp  nao-interface.cpp
src/windows/: BodyArray.h  README  header.h  kinect_acquisition.cpp
urdf/: ABOUT.md  naoV40red.urdf
